# rust_pad

./: .gitignore
image/: Cargo.toml
image/src/: bean.rs  lib.rs
image/tests/: test.rs
image_meta/: Cargo-config.toml  Cargo.toml
image_meta/src/: decoder.rs  exif.rs  gif_decoder.rs  heif_decoder.rs  jpeg_decoder.rs  lib.rs  png_decoder.rs  registry.rs  webp_decoder.rs
image_meta/tests/: test.rs
image_meta/tests/images/: IMG_7346.HEIC
