[package]
name = "image_meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-format = "0.25.0"
image = "0.25.2"
libheif-rs = "1.0.2"
png = "0.17.13"
lazy_static = "1.5.0"
jpeg-decoder = "0.3.1"
