[package]
name = "image_meta"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-format = "0.25.0"
png = "0.17.13"
lazy_static = "1.5.0"
jpeg-decoder = "0.3.1"
gif = "0.13.1"
image-webp = "0.1.3"
kamadak-exif = "0.5.5"
imagesize = "0.13.0"


#[target.'cfg(target_os = "android")']
#log = { version = "0.4", features = ["android"] }
